--- a/styles/game.css
+++ b/styles/game.css
@@ -82,11 +82,11 @@ html, body {
   font-weight: 500;
 }
 
-.word__result {
+.result {
   overflow: auto;
   text-align: center;
   width: 130px;
-  height: 60px;
+  height: 90px;
   font-size: 11px;
   font-weight: 700;
 }
