--- a/styles/home.css
+++ b/styles/home.css
@@ -20,7 +20,7 @@ body {
 
 .wrapper__header {
   width: 100%;
-  height: 40px;
+  height: 120px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -51,8 +51,12 @@ body {
 }
 
 .contents__body {
-  font-size: 11px;
+  height: 200px;
+  font-size: 12px;
   color: gray;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .wrapper__body {
@@ -64,7 +68,7 @@ body {
   width: 100%;
   height: 240px;
   margin-top: 15px;
-  background-color: #C4C4C4;
+  background-image: url('../images/miniroom.jpg');
 }
 
 
